--- a/admin.html
+++ b/admin.html
@@ -8,7 +8,7 @@
   </head>
   <body style="width: 100%; height: 100%">
     <iframe
-      style="width: 100%; height: 100%"
+      style="width: 100vw; height: 100vh"
       src="https://the-capital-drab.vercel.app/"
     ></iframe>
   </body>
