--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,7 @@
     <title>Properties Management</title>
     <link rel="stylesheet" href="./login.css" />
   </head>
-  <body style="width: 100%; height: 100%">
+  <body style="width: 100vw; height: 100vh">
     <iframe
       style="width: 100vw; height: 100vh"
       src="https://the-capital-drab.vercel.app/"
